--- a/Fisch_Zegel.jrxml
+++ b/Fisch_Zegel.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-08-22T12:47:52 -->
+<!-- 2015-08-27T18:16:06 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Fisch_Zegel" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="43610763-ab21-4f7f-ba3c-f91c99be7e5f">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="VisZegel"/>
 	<style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
@@ -35,9 +35,10 @@
 			<![CDATA[]]>
 		</queryString>
 	</subDataset>
+	<parameter name="billId" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[SELECT *
-FROM `VisZegel`.`Rechnungen`
+FROM `VisZegel`.`Rechnungen` WHERE `VisZegel`.`id` = $P{billId}
 ORDER BY `VisZegel`.`Rechnungen`.Datum ASC]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer">
