--- a/src/main/webapp/resources/css/billing.css
+++ b/src/main/webapp/resources/css/billing.css
@@ -1,30 +1,42 @@
 @CHARSET "ISO-8859-1";
 
 #heading {
-	width: 100%;
-	text-align: center;
-	background-color: black;
+    width: 100%;
+    text-align: center;
+    background-color: black;
 }
 
 #menuPointWrapper {
-	width: 100%;
+    width: 100%;
 }
 
 #mainContent {
-	clear: both;
+    clear: both;
 }
 
 .menuPoint {
 
-	border: solid 5px #000000;
-	float: left;
-	font-size: 150%;
+    background-color:#44c767;
+    border:3px solid #FFF000;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:17px;
+    padding:16px 31px;
+    text-decoration:none;
+    text-shadow:0px 1px 5px #2f6627;
+    float:left;
+    text-size:150%;
+    color: red;
+    background-color :black;
 }
 
 .menuPoint:hover {
-	background-color: blue;
+    background-color: gray;
+
 }
 
 #lineBreaker {
-	height: 30px;
+    height: 30px;
 }
