--- a/src/main/webapp/resources/css/billing.css
+++ b/src/main/webapp/resources/css/billing.css
@@ -6,6 +6,9 @@
     background-color: black;
 }
 
+.seperator30{
+    margin-top: 30px;
+}
 #menuPointWrapper {
     width: 100%;
 }
@@ -45,7 +48,7 @@
 }
 
 .customer_table{
-    width: 1400px;
+    width: 1500px;
     table-layout:fixed;
 
 }
