--- a/src/main/webapp/resources/css/billing.css
+++ b/src/main/webapp/resources/css/billing.css
@@ -2,7 +2,11 @@
 
 #heading {
     width: 100%;
+    height : 100px;
     text-align: center;
+    background : url('../images/viszegel.png');
+    background-size: 1000px 1000px;
+
     background-color: black;
 }
 
@@ -13,30 +17,30 @@
     width: 100%;
 }
 
-#mainContent {
+#mainContent,#status {
     clear: both;
 }
 
 .menuPoint {
 
-    background-color:#44c767;
-    border:3px solid #FFF000;
+    border:2px solid #FFF000;
+    border-color:black;
     display:inline-block;
     cursor:pointer;
-    color:#ffffff;
     font-family:Arial;
     font-size:17px;
     padding:16px 31px;
     text-decoration:none;
-    text-shadow:0px 1px 5px #2f6627;
+    color:black;
+    text-shadow: 0 1px 1px #FFFFFF;
     float:left;
-    text-size:150%;
-    color: red;
-    background-color :black;
+    font-weight: bold;
+    color: black;
+    background-color :orange;
 }
 
 .menuPoint:hover {
-    background-color: gray;
+    background-color: #FFF200;
 
 }
 .add_input{
