--- a/src/main/resources/report/Fisch_Zegel.jrxml
+++ b/src/main/resources/report/Fisch_Zegel.jrxml
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-10-23T21:16:40 -->
+<!-- 2015-10-31T14:04:04 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Fisch_Zegel" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="43610763-ab21-4f7f-ba3c-f91c99be7e5f">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="VisZegel"/>
 	<style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
@@ -138,11 +138,11 @@
 		<groupFooter>
 			<band height="54">
 				<textField>
-					<reportElement x="380" y="0" width="100" height="30" uuid="83240598-bb30-4487-be4d-091edb1fd4f0"/>
+					<reportElement x="380" y="24" width="100" height="30" uuid="83240598-bb30-4487-be4d-091edb1fd4f0"/>
 					<textFieldExpression><![CDATA[$V{Preis1}]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement x="290" y="0" width="80" height="30" uuid="17997dbc-8937-46b5-b380-1c293d37ed77"/>
+					<reportElement x="290" y="24" width="80" height="30" uuid="17997dbc-8937-46b5-b380-1c293d37ed77"/>
 					<box>
 						<topPen lineWidth="0.0"/>
 						<leftPen lineWidth="0.0"/>
@@ -162,7 +162,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="110" splitType="Stretch">
+		<band height="150" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<staticText>
 				<reportElement x="0" y="0" width="148" height="16" uuid="94aa07a8-102c-4e6c-8a6d-cc509ab8174c"/>
@@ -178,13 +178,14 @@
 				<text><![CDATA[Zegel Kerkrade GmbH ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="406" y="0" width="148" height="16" uuid="c6513ac6-1420-4e47-b2d1-aa2400ef15c7"/>
-				<text><![CDATA[tel. : 00-Fisch-00]]></text>
+				<reportElement x="406" y="0" width="148" height="90" uuid="c6513ac6-1420-4e47-b2d1-aa2400ef15c7"/>
+				<textElement markup="html"/>
+				<text><![CDATA[tel. : 00-Fisch-00 <br>]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="80" y="20" width="100" height="30" uuid="174291f1-f025-4e48-9477-9a193a504398"/>
 				<textElement>
-					<font size="12" isBold="true"/>
+					<font size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{bill_id}]]></textFieldExpression>
 			</textField>
@@ -210,8 +211,16 @@
 				<text><![CDATA[Kundenname:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="0" y="90" width="100" height="20" uuid="b4352601-9a6e-4df6-b0cb-f57d607da83d"/>
+				<reportElement x="0" y="130" width="100" height="20" uuid="b4352601-9a6e-4df6-b0cb-f57d607da83d"/>
 				<textFieldExpression><![CDATA[$F{location}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="110" width="100" height="20" uuid="abc9f5fe-7b36-41c0-b0ed-9167b52d187c"/>
+				<textFieldExpression><![CDATA[$F{house_number}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="90" width="100" height="20" uuid="77edad51-1012-4a5f-81a7-8125fbc330bd"/>
+				<textFieldExpression><![CDATA[$F{country}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
