--- a/src/main/resources/report/Fisch_Zegel.jrxml
+++ b/src/main/resources/report/Fisch_Zegel.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-11-15T12:51:14 -->
+<!-- 2015-11-22T14:51:48 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Fisch_Zegel" pageWidth="595" pageHeight="842" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="43610763-ab21-4f7f-ba3c-f91c99be7e5f">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="VisZegel"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
@@ -95,11 +95,15 @@
 	<pageHeader>
 		<band height="346">
 			<textField>
-				<reportElement x="130" y="210" width="100" height="20" uuid="738e1530-6f24-4158-b823-9b46cc39dbe6"/>
+				<reportElement x="179" y="210" width="100" height="20" uuid="738e1530-6f24-4158-b823-9b46cc39dbe6"/>
 				<textFieldExpression><![CDATA[$F{house_number}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="100" y="316" width="100" height="30" uuid="45036e2a-062f-4d6d-869d-557f72dcef03"/>
+				<reportElement x="70" y="326" width="113" height="20" uuid="45036e2a-062f-4d6d-869d-557f72dcef03">
+					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.4" lineColor="#D1CDCD"/>
 					<leftPen lineWidth="0.4" lineColor="#D1CDCD"/>
@@ -112,7 +116,9 @@
 				<text><![CDATA[Bezeichnung]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="300" y="316" width="100" height="30" uuid="8c5b65f2-3c4f-43ea-8835-0cf8eaad244a"/>
+				<reportElement x="296" y="326" width="113" height="20" uuid="8c5b65f2-3c4f-43ea-8835-0cf8eaad244a">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.4" lineStyle="Solid" lineColor="#D1CDCD"/>
 					<leftPen lineWidth="0.4" lineStyle="Solid" lineColor="#D1CDCD"/>
@@ -125,7 +131,7 @@
 				<text><![CDATA[Preis pro kg/st.]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="30" y="230" width="100" height="20" uuid="b140926e-67f8-4a2d-b4fc-9bd8c9493567"/>
+				<reportElement x="79" y="228" width="100" height="20" uuid="b140926e-67f8-4a2d-b4fc-9bd8c9493567"/>
 				<textFieldExpression><![CDATA[$F{postcode}]]></textFieldExpression>
 			</textField>
 			<staticText>
@@ -133,11 +139,11 @@
 				<text><![CDATA[Rechnungsdatum :]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="130" y="230" width="100" height="20" uuid="a3473cc5-6d75-42a2-9176-c5c9ff0c85a8"/>
+				<reportElement x="179" y="228" width="100" height="20" uuid="a3473cc5-6d75-42a2-9176-c5c9ff0c85a8"/>
 				<textFieldExpression><![CDATA[$F{location}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="30" y="270" width="100" height="37" uuid="99066ee1-ab0a-4e35-b9ff-bf41412e9d1e"/>
+				<reportElement x="76" y="270" width="100" height="37" uuid="99066ee1-ab0a-4e35-b9ff-bf41412e9d1e"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -156,17 +162,21 @@
 				<textFieldExpression><![CDATA[$F{bill_id}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="30" y="210" width="100" height="20" uuid="9cb84ed8-7feb-4c05-9f77-9d05b256c706"/>
+				<reportElement x="79" y="208" width="100" height="20" uuid="9cb84ed8-7feb-4c05-9f77-9d05b256c706"/>
 				<textFieldExpression><![CDATA[$F{adress}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="30" y="192" width="100" height="20" uuid="a8966b74-7a00-4b41-839a-134257f43b5d">
+				<reportElement x="79" y="192" width="100" height="20" uuid="a8966b74-7a00-4b41-839a-134257f43b5d">
 					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="200" y="316" width="100" height="30" uuid="09f78da5-a674-4c8e-8d47-2096f42a07af"/>
+				<reportElement x="183" y="326" width="113" height="20" uuid="09f78da5-a674-4c8e-8d47-2096f42a07af">
+					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.4" lineStyle="Solid" lineColor="#D1CDCD"/>
 					<leftPen lineWidth="0.4" lineStyle="Solid" lineColor="#D1CDCD"/>
@@ -179,7 +189,10 @@
 				<text><![CDATA[Menge]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="400" y="316" width="100" height="30" uuid="82ab8c07-f1dd-45df-9ca4-21b612367a13"/>
+				<reportElement x="409" y="326" width="113" height="20" uuid="82ab8c07-f1dd-45df-9ca4-21b612367a13">
+					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.4" lineStyle="Solid" lineColor="#D1CDCD"/>
 					<leftPen lineWidth="0.4" lineStyle="Solid" lineColor="#D1CDCD"/>
@@ -192,15 +205,51 @@
 				<text><![CDATA[Total]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="370" y="250" width="100" height="20" uuid="fca402c0-0593-4194-a031-b3c54ca246a9"/>
+				<reportElement x="390" y="248" width="100" height="22" uuid="fca402c0-0593-4194-a031-b3c54ca246a9"/>
 				<textElement textAlignment="Left"/>
 				<textFieldExpression><![CDATA[" von " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="320" y="250" width="50" height="20" uuid="9e5bd41e-896c-4403-871b-afbfd14b8cf1"/>
+				<reportElement x="340" y="248" width="50" height="22" uuid="9e5bd41e-896c-4403-871b-afbfd14b8cf1"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Seite " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="79" y="174" width="120" height="7" forecolor="#D1CDCD" uuid="d994e1aa-eeda-486b-b166-284369fb178a">
+					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
+				</reportElement>
+				<textElement markup="styled">
+					<font size="5"/>
+				</textElement>
+				<text><![CDATA[Fisch Zegel Burtscheid Gmbh, 52066 Aachen]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="438" y="101" width="120" height="7" forecolor="#D1CDCD" uuid="c4fab901-289a-4809-808b-fdc253a23f11">
+					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+				</reportElement>
+				<textElement>
+					<font size="5"/>
+				</textElement>
+				<text><![CDATA[Info@zegel-burtscheid.de]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="438" y="140" width="120" height="7" forecolor="#D1CDCD" uuid="6661297c-891f-4d40-a617-b48b12d3857f">
+					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
+				</reportElement>
+				<textElement>
+					<font size="5"/>
+				</textElement>
+				<text><![CDATA[www.fischzegel-burtscheid.de]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="410" y="67" width="120" height="12" forecolor="#D1CDCD" uuid="a661f402-7386-4932-9170-56aec03cbf6a">
+					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
+				</reportElement>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<text><![CDATA[Tel.: +49(0)151-57223193]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -209,10 +258,12 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="198" splitType="Immediate">
+		<band height="40" splitType="Immediate">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-			<subreport runToBottom="true" overflowType="NoStretch">
-				<reportElement key="" positionType="Float" stretchType="RelativeToBandHeight" x="100" y="48" width="400" height="150" isRemoveLineWhenBlank="true" isPrintInFirstWholeBand="true" isPrintWhenDetailOverflows="true" uuid="018625e2-d133-458b-8e2a-96db1e2befff"/>
+			<subreport overflowType="Stretch">
+				<reportElement key="" positionType="Float" stretchType="RelativeToTallestObject" x="70" y="20" width="453" height="20" isRemoveLineWhenBlank="true" isPrintInFirstWholeBand="true" isPrintWhenDetailOverflows="true" uuid="018625e2-d133-458b-8e2a-96db1e2befff">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<subreportParameter name="bill_id_subreport">
 					<subreportParameterExpression><![CDATA[$F{bill_id}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -223,12 +274,15 @@
 				<subreportExpression><![CDATA[$P{bill_path}]]></subreportExpression>
 			</subreport>
 			<textField>
-				<reportElement positionType="Float" x="100" y="8" width="95" height="40" isPrintWhenDetailOverflows="true" uuid="ccc9cb1b-eb58-4b3d-8619-8cd540958ac0"/>
+				<reportElement positionType="Float" x="70" y="0" width="113" height="20" isPrintWhenDetailOverflows="true" uuid="ccc9cb1b-eb58-4b3d-8619-8cd540958ac0">
+					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box>
-					<topPen lineWidth="0.0" lineColor="#D1CDCD"/>
-					<leftPen lineWidth="0.0" lineColor="#D1CDCD"/>
-					<bottomPen lineWidth="0.0" lineColor="#D1CDCD"/>
-					<rightPen lineWidth="0.0" lineColor="#D1CDCD"/>
+					<topPen lineWidth="0.4" lineColor="#D1CDCD"/>
+					<leftPen lineWidth="0.4" lineColor="#D1CDCD"/>
+					<bottomPen lineWidth="0.4" lineColor="#D1CDCD"/>
+					<rightPen lineWidth="0.4" lineColor="#D1CDCD"/>
 				</box>
 				<textElement>
 					<font size="12" isBold="false" isItalic="true"/>
@@ -238,24 +292,15 @@
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="297" splitType="Immediate">
-			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-		</band>
+		<band height="355" splitType="Immediate"/>
 	</pageFooter>
 	<lastPageFooter>
 		<band height="297">
-			<textField evaluationTime="Report">
-				<reportElement x="50" y="267" width="100" height="30" uuid="563fdc20-00d0-43c5-8fd6-3bdaf3986eb1"/>
-				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[" von " + $V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="0" y="267" width="50" height="30" uuid="99f1ea1c-aa59-4d63-b3ac-fd4acdddb563"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Seite " + $V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
 			<staticText>
-				<reportElement x="160" y="6" width="160" height="24" uuid="aaf4518e-4951-4416-8d97-100e25237c49"/>
+				<reportElement x="70" y="16" width="160" height="16" uuid="aaf4518e-4951-4416-8d97-100e25237c49">
+					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.4" lineColor="#D1CDCD"/>
 					<leftPen lineWidth="0.4" lineColor="#D1CDCD"/>
@@ -268,7 +313,9 @@
 				<text><![CDATA[Summe vor Steuern:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="160" y="54" width="160" height="24" uuid="7ab2c36f-73d6-40e4-a589-aabda6f99fdf"/>
+				<reportElement x="70" y="48" width="160" height="16" uuid="7ab2c36f-73d6-40e4-a589-aabda6f99fdf">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.4" lineColor="#D1CDCD"/>
 					<leftPen lineWidth="0.4" lineColor="#D1CDCD"/>
@@ -281,7 +328,9 @@
 				<text><![CDATA[MwSt 19%:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="160" y="78" width="160" height="24" uuid="61c1959f-e429-4fd9-959b-cc1ea02d541d"/>
+				<reportElement x="70" y="64" width="160" height="16" uuid="61c1959f-e429-4fd9-959b-cc1ea02d541d">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.8" lineColor="#000000"/>
 					<leftPen lineWidth="0.4" lineColor="#D1CDCD"/>
@@ -294,7 +343,10 @@
 				<text><![CDATA[Gesamtsumme :]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="320" y="6" width="100" height="24" uuid="60aa9eea-f25a-49ea-894a-8ed8a647dea4"/>
+				<reportElement x="230" y="16" width="100" height="16" uuid="60aa9eea-f25a-49ea-894a-8ed8a647dea4">
+					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.4" lineColor="#D1CDCD"/>
 					<leftPen lineWidth="0.4" lineColor="#D1CDCD"/>
@@ -307,7 +359,9 @@
 				<textFieldExpression><![CDATA["€ "+$P{mwstOhne}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="320" y="54" width="100" height="24" uuid="9bdaa3bc-2c0e-4676-8428-1862f3275785"/>
+				<reportElement x="230" y="48" width="100" height="16" uuid="9bdaa3bc-2c0e-4676-8428-1862f3275785">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.4" lineColor="#D1CDCD"/>
 					<leftPen lineWidth="0.4" lineColor="#D1CDCD"/>
@@ -320,7 +374,9 @@
 				<textFieldExpression><![CDATA["€ "+$P{mwst19}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="320" y="78" width="100" height="24" uuid="7baf29b8-ca5a-4293-8ac6-1779428d67d7"/>
+				<reportElement x="230" y="64" width="100" height="16" uuid="7baf29b8-ca5a-4293-8ac6-1779428d67d7">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.8" lineColor="#0A0101"/>
 					<leftPen lineWidth="0.4" lineColor="#D1CDCD"/>
@@ -330,10 +386,13 @@
 				<textElement>
 					<font size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["€+ "+$P{mwstTotal}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["€ "+$P{mwstTotal}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="160" y="30" width="160" height="24" uuid="49dc00ce-8c30-4c21-9cdd-93df96a7d74f"/>
+				<reportElement x="70" y="32" width="160" height="16" uuid="49dc00ce-8c30-4c21-9cdd-93df96a7d74f">
+					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.4" lineColor="#D1CDCD"/>
 					<leftPen lineWidth="0.4" lineColor="#D1CDCD"/>
@@ -346,7 +405,9 @@
 				<text><![CDATA[MwSt 7%:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="320" y="30" width="100" height="24" uuid="ea810da1-729a-4211-aea8-e0b36328b4f6"/>
+				<reportElement x="230" y="32" width="100" height="16" uuid="ea810da1-729a-4211-aea8-e0b36328b4f6">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.4" lineColor="#D1CDCD"/>
 					<leftPen lineWidth="0.4" lineColor="#D1CDCD"/>
@@ -358,6 +419,24 @@
 				</textElement>
 				<textFieldExpression><![CDATA["€ "+$P{mwst7}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="70" y="110" width="430" height="20" uuid="3e359602-ac7a-4022-b832-dde2c6db4efe">
+					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+				</reportElement>
+				<text><![CDATA[Wir danken Ihnen für ihren Einkauf und hoffen Sie bald wieder beliefern zu dürfen.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="70" y="130" width="430" height="20" uuid="651cfbda-4889-42e9-ac43-57d1403f0e86">
+					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+				</reportElement>
+				<text><![CDATA[Mit freundlichen Grüßen]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="70" y="150" width="430" height="20" uuid="2031cfc9-b271-4d83-8989-b0de516c2633">
+					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+				</reportElement>
+				<text><![CDATA[Jan Wilhelmus Zegel & Kevin Zegel]]></text>
+			</staticText>
 		</band>
 	</lastPageFooter>
 </jasperReport>
